--- a/index.html
+++ b/index.html
@@ -239,31 +239,10 @@
         </div>
       </div>
 
-      <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-black small text-center text-white-50">
-    <div class="container">
-      Copyright &copy; Your Website 2018
-    </div>
-  </footer>
-
-  <footer class="bg-black small text-center text-white-75">
-    <div class="">
-      <h1 class="display-4">
+ <div class="text-center">
+   <br>
+   <hr>
+      <h1 class="display-4 icon-red">
         <i class="devicon-css3-plain"></i>
         <i class="devicon-bootstrap-plain"></i>
         <i class="devicon-express-original"></i>
@@ -288,6 +267,27 @@
         <i class="devicon-ubuntu-plain"></i>
         <i class="devicon-visualstudio-plain"></i>
       </h1>
+
+    </div>
+      <div class="social d-flex justify-content-center">
+        <a href="#" class="mx-2">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#" class="mx-2">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#" class="mx-2">
+          <i class="fab fa-github"></i>
+        </a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-black small text-center text-white-50">
+    <div class="container">
+      Copyright &copy; Your Website 2018
     </div>
   </footer>
 
