--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <title>Sean B Portfolio</title>
 
+  <!-- favicon -->
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -59,9 +62,8 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Sean B</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start
-          Bootstrap.</h2>
-        <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">A portfolio of a Full-Stack Developer</h2>
+        <a href="#about" class="btn btn-primary js-scroll-trigger">See more</a>
       </div>
     </div>
   </header>
@@ -239,36 +241,36 @@
         </div>
       </div>
 
- <div class="text-center">
-   <br>
-   <hr>
-      <h1 class="display-4 icon-red">
-        <i class="devicon-css3-plain"></i>
-        <i class="devicon-bootstrap-plain"></i>
-        <i class="devicon-express-original"></i>
-        <i class="devicon-git-plain"></i>
-        <i class="devicon-gulp-plain"></i>
-        <i class="devicon-heroku-original"></i>
-        <i class="devicon-jquery-plain"></i>
-        <i class="devicon-less-plain-wordmark"></i>
-        <i class="devicon-html5-plain"></i>
-        <i class="devicon-illustrator-plain"></i>
-        <i class="devicon-javascript-plain"></i>
-        <i class="devicon-linux-plain"></i>
-        <i class="devicon-mongodb-plain-wordmark"></i>
-        <i class="devicon-mysql-plain"></i>
-        <i class="devicon-nodejs-plain"></i>
-        <i class="devicon-photoshop-plain"></i>
-        <i class="devicon-sass-original"></i>
-        <i class="devicon-sequelize-plain"></i>
-        <i class="devicon-slack-plain"></i>
-        <i class="devicon-ssh-plain"></i>
-        <i class="devicon-trello-plain-wordmark"></i>
-        <i class="devicon-ubuntu-plain"></i>
-        <i class="devicon-visualstudio-plain"></i>
-      </h1>
+      <div class="text-center">
+        <br>
+        <hr>
+        <h1 class="display-4 icon-red">
+          <i class="devicon-css3-plain"></i>
+          <i class="devicon-bootstrap-plain"></i>
+          <i class="devicon-express-original"></i>
+          <i class="devicon-git-plain"></i>
+          <i class="devicon-gulp-plain"></i>
+          <i class="devicon-heroku-original"></i>
+          <i class="devicon-jquery-plain"></i>
+          <i class="devicon-less-plain-wordmark"></i>
+          <i class="devicon-html5-plain"></i>
+          <i class="devicon-illustrator-plain"></i>
+          <i class="devicon-javascript-plain"></i>
+          <i class="devicon-linux-plain"></i>
+          <i class="devicon-mongodb-plain-wordmark"></i>
+          <i class="devicon-mysql-plain"></i>
+          <i class="devicon-nodejs-plain"></i>
+          <i class="devicon-photoshop-plain"></i>
+          <i class="devicon-sass-original"></i>
+          <i class="devicon-sequelize-plain"></i>
+          <i class="devicon-slack-plain"></i>
+          <i class="devicon-ssh-plain"></i>
+          <i class="devicon-trello-plain-wordmark"></i>
+          <i class="devicon-ubuntu-plain"></i>
+          <i class="devicon-visualstudio-plain"></i>
+        </h1>
 
-    </div>
+      </div>
       <div class="social d-flex justify-content-center">
         <a href="#" class="mx-2">
           <i class="fab fa-twitter"></i>
