--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
+          <h2 class="text-white mb-4">Follow me on github <i class="devicon-github-plain-wordmark"></i></h2>
           <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours
             right now, simply download the template on
             <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open
@@ -111,7 +111,7 @@
       <br>
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid color-change" src="./img/Capture1.PNG" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
@@ -130,7 +130,7 @@
       <!-- Project Two Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid color-change" src="./img/Capture2.PNG" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -145,10 +145,10 @@
           </div>
         </div>
       </div>
-      <!-- Project One Row -->
+      <!-- Project Three Row -->
       <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-01.jpg" alt="">
+          <img class="img-fluid color-change" src="./img/Capture3.PNG" alt="">
         </div>
         <div class="col-lg-6">
           <div class="bg-black text-center h-100 project">
@@ -164,10 +164,10 @@
         </div>
       </div>
 
-      <!-- Project Two Row -->
+      <!-- Project Four Row -->
       <div class="row justify-content-center no-gutters">
         <div class="col-lg-6">
-          <img class="img-fluid" src="img/demo-image-02.jpg" alt="">
+          <img class="img-fluid color-change" src="./img/Capture4.PNG" alt="">
         </div>
         <div class="col-lg-6 order-lg-first">
           <div class="bg-black text-center h-100 project">
@@ -217,7 +217,7 @@
               <i class="fas fa-map-marked-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Address</h4>
               <hr class="my-4">
-              <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+              <div class="small text-black-50">902 Cleveland st. Houston TX</div>
             </div>
           </div>
         </div>
@@ -229,7 +229,7 @@
               <h4 class="text-uppercase m-0">Email</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                <a href="#">hello@yourdomain.com</a>
+                <a href="#">spb4578@gmail.com</a>
               </div>
             </div>
           </div>
@@ -241,7 +241,7 @@
               <i class="fas fa-mobile-alt text-primary mb-2"></i>
               <h4 class="text-uppercase m-0">Phone</h4>
               <hr class="my-4">
-              <div class="small text-black-50">+1 (555) 902-8832</div>
+              <div class="small text-black-50">+1 (347) 461-6924</div>
             </div>
           </div>
         </div>
@@ -279,13 +279,13 @@
       </div>
       <div class="social d-flex justify-content-center">
         <a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
+          <i class="fab fa-instagram"></i>
         </a>
         <a href="#" class="mx-2">
           <i class="fab fa-facebook-f"></i>
         </a>
         <a href="#" class="mx-2">
-          <i class="fab fa-github"></i>
+          <i class="fab fa-linkedin"></i>
         </a>
       </div>
 
