--- a/index.html
+++ b/index.html
@@ -101,10 +101,12 @@
         <div class="modal-body">
           <!-- coming soon gif -->
           <p>
-            <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/F1eakiTIV7iFO"
-                width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed"
-                allowFullScreen></iframe></div>
-            <p><a href="https://giphy.com/gifs/vintage-coming-soon-drive-in-movie-F1eakiTIV7iFO">via GIPHY</a></p>
+                <embed src="./img/SeanBrennanResume.pdf" type="application/pdf"   height="500px" width="100%" class="responsive">
+                  <a href="./img/SeanBrennanResume.pdf">download</a>
+
+                  <!-- <object data="./img/SeanBrennanResume.pdf" type="application/x-pdf" title="SamplePdf" width="500" height="720">
+                    <a href="./img/SeanBrennanResume.pdf">SeanB</a> 
+                </object> -->
           </p>
         </div>
         <div class="modal-footer">
