--- a/index.html
+++ b/index.html
@@ -102,7 +102,11 @@
           <!-- coming soon gif -->
           <p>
                 <embed src="./img/SeanBrennanResume.pdf" type="application/pdf"   height="500px" width="100%" class="responsive">
-                  <a href="./img/SeanBrennanResume.pdf">download</a>
+                  <br>
+                  <hr>
+                  If you are viewing this page on mobile please <a href="./img/SeanBrennanResume.pdf">download.pdf</a> here
+                  <hr>
+                  <br>
 
                   <!-- <object data="./img/SeanBrennanResume.pdf" type="application/x-pdf" title="SamplePdf" width="500" height="720">
                     <a href="./img/SeanBrennanResume.pdf">SeanB</a> 
