new photo added

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
+            <img class="rounded-circle mb-5 grays" src="./img/SBprofile.jpg" height="400px" >
           <h1 class="text-white mb-4">View my Resume</h1>
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">view</button>
           <h3 class="text-white mb-4 mt-5">And Follow me on Github <i class="devicon-github-plain-wordmark"></i></h3>
